docs-archive/apache-airflow-providers-google/16.0.0/_sources/_api/airflow/providers/google/ads/hooks/ads/index.rst.txt
airflow.providers.google.ads.hooks.ads
======================================

.. py:module:: airflow.providers.google.ads.hooks.ads

.. autoapi-nested-parse::

   This module contains Google Ad hook.



Classes
-------

.. autoapisummary::

   airflow.providers.google.ads.hooks.ads.GoogleAdsHook


Module Contents
---------------

.. py:class:: GoogleAdsHook(api_version = None, gcp_conn_id = 'google_cloud_default', google_ads_conn_id = 'google_ads_default', **kwargs)

   Bases: :py:obj:`airflow.hooks.base.BaseHook`


   Interact with Google Ads API.

   This hook offers two flows of authentication.

   1. OAuth Service Account Flow (requires two connections)

       - gcp_conn_id - provides service account details (like any other GCP connection)
       - google_ads_conn_id - which contains information from Google Ads config.yaml file
           in the ``extras``. Example of the ``extras``:

           .. code-block:: json

               {
                   "google_ads_client": {
                       "developer_token": "{{ INSERT_TOKEN }}",
                       "json_key_file_path": null,
                       "impersonated_email": "{{ INSERT_IMPERSONATED_EMAIL }}"
                   }
               }

           The ``json_key_file_path`` is resolved by the hook using credentials from gcp_conn_id.
           https://developers.google.com/google-ads/api/docs/client-libs/python/oauth-service

       .. seealso::
           For more information on how Google Ads authentication flow works take a look at:
           https://developers.google.com/google-ads/api/docs/client-libs/python/oauth-service

       .. seealso::
           For more information on the Google Ads API, take a look at the API docs:
           https://developers.google.com/google-ads/api/docs/start

   2. Developer token from API center flow (only requires google_ads_conn_id)

       - google_ads_conn_id - which contains developer token, refresh token, client_id and client_secret
           in the ``extras``. Example of the ``extras``:

           .. code-block:: json

               {
                   "google_ads_client": {
                       "developer_token": "{{ INSERT_DEVELOPER_TOKEN }}",
                       "refresh_token": "{{ INSERT_REFRESH_TOKEN }}",
                       "client_id": "{{ INSERT_CLIENT_ID }}",
                       "client_secret": "{{ INSERT_CLIENT_SECRET }}",
                       "use_proto_plus": "{{ True or False }}",
                   }
               }

       .. seealso::
           For more information on how to obtain a developer token look at:
           https://developers.google.com/google-ads/api/docs/get-started/dev-token

       .. seealso::
           For more information about use_proto_plus option see the Protobuf Messages guide:
           https://developers.google.com/google-ads/api/docs/client-libs/python/protobuf-messages

   :param gcp_conn_id: The connection ID with the service account details.
   :param google_ads_conn_id: The connection ID with the details of Google Ads config.yaml file.
   :param api_version: The Google Ads API version to use.


   .. py:attribute:: conn_name_attr
      :value: 'google_ads_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'google_ads_default'



   .. py:attribute:: conn_type
      :value: 'google_ads'



   .. py:attribute:: hook_name
      :value: 'Google Ads'



   .. py:method:: get_connection_form_widgets()
      :classmethod:


      Return connection widgets to add to Google Ads connection form.



   .. py:method:: get_ui_field_behaviour()
      :classmethod:


      Return custom UI field behaviour for Google Ads connection.



   .. py:attribute:: api_version
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: google_ads_conn_id
      :value: 'google_ads_default'



   .. py:attribute:: google_ads_config
      :type:  dict[str, Any]


   .. py:attribute:: authentication_method
      :type:  Literal['service_account', 'developer_token']
      :value: 'service_account'



   .. py:method:: search(client_ids, query, **kwargs)

      Pull data from the Google Ads API.

      Native protobuf message instances are returned (those seen in versions
      prior to 10.0.0 of the google-ads library).

      This method is for backwards compatibility with older versions of the
      google_ads_hook.

      Check out the search_proto_plus method to get API results in the new
      default format of the google-ads library since v10.0.0 that behave
      more like conventional python object (using proto-plus-python).

      :param client_ids: Google Ads client ID(s) to query the API for.
      :param query: Google Ads Query Language query.
      :return: Google Ads API response, converted to Google Ads Row objects.



   .. py:method:: search_proto_plus(client_ids, query, **kwargs)

      Pull data from the Google Ads API.

      Instances of proto-plus-python message are returned, which behave more
      like conventional Python objects.

      :param client_ids: Google Ads client ID(s) to query the API for.
      :param query: Google Ads Query Language query.
      :return: Google Ads API response, converted to Google Ads Row objects



   .. py:method:: list_accessible_customers()

      List resource names of customers.

      The resulting list of customers is based on your OAuth credentials. The
      request returns a list of all accounts that you are able to act upon
      directly given your current credentials. This will not necessarily
      include all accounts within the account hierarchy; rather, it will only
      include accounts where your authenticated user has been added with admin
      or other rights in the account.

      ..seealso::
          https://developers.google.com/google-ads/api/reference/rpc

      :return: List of names of customers



